fix(docs): fix spacing in headings for mdx

--- a/docs/src/components/css/global.css
+++ b/docs/src/components/css/global.css
@@ -13,3 +13,7 @@ body {
 .border-right {
   border-right: var(--border);
 }
+
+p {
+  margin-top: 8px;
+}
